logFile.log
Server running at localhost
error: Forever detected script was killed by signal: SIGKILL
error: Script restart attempt #1
Server running at localhost
error: Forever detected script was killed by signal: SIGKILL
error: Script restart attempt #2
Server running at localhost
[0mGET /users/2XbOTou0P4YsBXupBwWs7IKW7sG2 [32m200 [0m13.521 ms - 482[0m
[0mGET /station/popular [32m200 [0m7.348 ms - 461[0m
[0mGET /users/2XbOTou0P4YsBXupBwWs7IKW7sG2 [32m200 [0m1.906 ms - 482[0m
[0mGET /station/popular [32m200 [0m2.146 ms - 461[0m
[0mGET /users/2XbOTou0P4YsBXupBwWs7IKW7sG2 [32m200 [0m1.499 ms - 482[0m
[0mGET /station/popular [32m200 [0m1.935 ms - 461[0m
error: Forever detected script was killed by signal: SIGKILL
error: Script restart attempt #3
module.js:529
    throw err;
    ^

Error: Cannot find module '../app/models/keywordd.server.model.js'
    at Function.Module._resolveFilename (module.js:527:15)
    at Function.Module._load (module.js:476:23)
    at Module.require (module.js:568:17)
    at require (internal/module.js:11:18)
    at module.exports (/home/ec2-user/workspace/BoxStore-Server/config/mongoose.js:13:5)
    at Object.<anonymous> (/home/ec2-user/workspace/BoxStore-Server/app.js:6:10)
    at Module._compile (module.js:624:30)
    at Object.Module._extensions..js (module.js:635:10)
    at Module.load (module.js:545:32)
    at tryModuleLoad (module.js:508:12)
    at Function.Module._load (module.js:500:3)
    at Function.Module.runMain (module.js:665:10)
    at startup (bootstrap_node.js:187:16)
    at bootstrap_node.js:607:3
error: Forever detected script exited with code: 1
module.js:529
    throw err;
    ^

Error: Cannot find module '../../app/controllers/keywords.server.controller'
    at Function.Module._resolveFilename (module.js:527:15)
    at Function.Module._load (module.js:476:23)
    at Module.require (module.js:568:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/home/ec2-user/workspace/BoxStore-Server/app/routes/keywords.server.routes.js:1:78)
    at Module._compile (module.js:624:30)
    at Object.Module._extensions..js (module.js:635:10)
    at Module.load (module.js:545:32)
    at tryModuleLoad (module.js:508:12)
    at Function.Module._load (module.js:500:3)
    at Module.require (module.js:568:17)
    at require (internal/module.js:11:18)
    at module.exports (/home/ec2-user/workspace/BoxStore-Server/config/express_config.js:32:3)
    at Object.<anonymous> (/home/ec2-user/workspace/BoxStore-Server/app.js:7:11)
    at Module._compile (module.js:624:30)
    at Object.Module._extensions..js (module.js:635:10)
error: Forever detected script exited with code: 1
error: Script restart attempt #1
Server running at localhost
events.js:182
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE :::3000
    at Object._errnoException (util.js:1019:11)
    at _exceptionWithHostPort (util.js:1041:20)
    at Server.setupListenHandle [as _listen2] (net.js:1344:14)
    at listenInCluster (net.js:1385:12)
    at Server.listen (net.js:1469:7)
    at Function.listen (/home/ec2-user/workspace/BoxStore-Server/node_modules/express/lib/application.js:618:24)
    at Object.<anonymous> (/home/ec2-user/workspace/BoxStore-Server/app.js:8:5)
    at Module._compile (module.js:624:30)
    at Object.Module._extensions..js (module.js:635:10)
    at Module.load (module.js:545:32)
    at tryModuleLoad (module.js:508:12)
    at Function.Module._load (module.js:500:3)
    at Function.Module.runMain (module.js:665:10)
    at startup (bootstrap_node.js:187:16)
    at bootstrap_node.js:607:3
error: Forever detected script exited with code: 1
error: Script restart attempt #2
Server running at localhost
events.js:182
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE :::3000
    at Object._errnoException (util.js:1019:11)
    at _exceptionWithHostPort (util.js:1041:20)
    at Server.setupListenHandle [as _listen2] (net.js:1344:14)
    at listenInCluster (net.js:1385:12)
    at Server.listen (net.js:1469:7)
    at Function.listen (/home/ec2-user/workspace/BoxStore-Server/node_modules/express/lib/application.js:618:24)
    at Object.<anonymous> (/home/ec2-user/workspace/BoxStore-Server/app.js:8:5)
    at Module._compile (module.js:624:30)
    at Object.Module._extensions..js (module.js:635:10)
    at Module.load (module.js:545:32)
    at tryModuleLoad (module.js:508:12)
    at Function.Module._load (module.js:500:3)
    at Function.Module.runMain (module.js:665:10)
    at startup (bootstrap_node.js:187:16)
    at bootstrap_node.js:607:3
error: Forever detected script exited with code: 1
/home/ec2-user/workspace/BoxStore-Server/app/controllers/users.server.controller.js:87
	).lean().function(err,result){
	^

SyntaxError: Unexpected token )
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:588:28)
    at Object.Module._extensions..js (module.js:635:10)
    at Module.load (module.js:545:32)
    at tryModuleLoad (module.js:508:12)
    at Function.Module._load (module.js:500:3)
    at Module.require (module.js:568:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/home/ec2-user/workspace/BoxStore-Server/app/routes/users.server.routes.js:1:75)
    at Module._compile (module.js:624:30)
    at Object.Module._extensions..js (module.js:635:10)
    at Module.load (module.js:545:32)
    at tryModuleLoad (module.js:508:12)
    at Function.Module._load (module.js:500:3)
    at Module.require (module.js:568:17)
error: Forever detected script exited with code: 1
